Update tooltip text of debug button

--- a/MainWindow.resx
+++ b/MainWindow.resx
@@ -120,9 +120,6 @@
   <metadata name="ConfigToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>279, 18</value>
   </metadata>
-  <metadata name="ConfigToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>279, 18</value>
-  </metadata>
   <data name="LabelCooldownText.ToolTip" xml:space="preserve">
     <value>Define the position/size of a red rectangle region where the 
 skill cooldown timer will be captured for OCR processing.
@@ -159,6 +156,19 @@ Set X Offset to 0 and this to any other value to list bars vertically.
 Set this to 0 and X Offset to any other value to list bars horizontally.
 This value is specific to the party size, so if you change 
 the party size box, the value of this will reflect the change.</value>
+  </data>
+  <metadata name="ConfigTab0.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="SelColourText.ToolTip" xml:space="preserve">
+    <value>Set the colour/opacity of the currently selected character's cooldown bar when skill is on cooldown.
+An opacity value of 00 will hide the selected character's bar while on cooldown.
+Set to the same colour as FG1 Colour for no change.</value>
+  </data>
+  <data name="SelTColourText.ToolTip" xml:space="preserve">
+    <value>Set the colour/opacity of the currently selected character's cooldown text when skill is on cooldown.
+An opacity value of 00 will hide the selected character's text while on cooldown.
+Set to the same colour as FG1T Colour for no change.</value>
   </data>
   <data name="PartyNumComboBox.ToolTip" xml:space="preserve">
     <value>Select which party number dot to adjust the X/Y Pos of individually.
@@ -219,11 +229,6 @@ before/after the cooldown is actually complete.
 A positive value will add to while negative will subtract.
 Default: 0</value>
   </data>
-  <data name="SelColourText.ToolTip" xml:space="preserve">
-    <value>Set the colour/opacity of the currently selected character's cooldown bar when skill is on cooldown.
-An opacity value of 00 will hide the selected character's bar while on cooldown.
-Set to the same colour as FG1 Colour for no change.</value>
-  </data>
   <data name="AutoButton.ToolTip" xml:space="preserve">
     <value>Automatically set values depending on current game resolution.
 By default, only supports up to 1920x1080.
@@ -246,10 +251,11 @@ by the "Override" property below.</value>
     <value>46</value>
   </metadata>
   <data name="DebugButton.ToolTip" xml:space="preserve">
-    <value>Automatically set values depending on current game resolution.
-By default, only supports up to 1920x1080.
-Other resolutions can be added to GenshinOverlay.Templates.ini
-Newly added resolutions will require GenshinOverlay to be restarted.</value>
+    <value>After using a skill, click this to perform a debug process of 
+the OCR engine to ensure that the rectangle region 
+and dots are set correctly.
+This will output some data to clipboard and also create a 
+debug image folder in the application directory.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1940,15 +1946,4 @@ Newly added resolutions will require GenshinOverlay to be restarted.</value>
   <metadata name="MStyleExtender.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>143, 17</value>
   </metadata>
-  <metadata name="ConfigTab0.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="ConfigTab0.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="SelTColourText.ToolTip" xml:space="preserve">
-    <value>Set the colour/opacity of the currently selected character's cooldown text when skill is on cooldown.
-An opacity value of 00 will hide the selected character's text while on cooldown.
-Set to the same colour as FG1T Colour for no change.</value>
-  </data>
 </root>
